...
    required this.onItemTapped,
    required this.selectedIndex,
  }) : super(key: const Key("TabletRankingPage"));

  @override
...
            Expanded(
              child: Container(
                key: const Key("BackGroundImageTabletRanking"),
                constraints: const BoxConstraints.expand(),
                decoration: const BoxDecoration(
...
                          flex: 4,
                          child: CustomText(
                            key: const Key("TabletLocalRankingText"),
                            text: AppLocalizations.of(context)!.localranking,
                            size: 30,
...
                                    padding: const EdgeInsets.all(8.0),
                                    child: Table(
                                      key: const Key("TabletTableLocalRanking"),
                                      border: TableBorder.symmetric(),
                                      defaultVerticalAlignment:
...
                                              child: CustomText(
                                                key: const Key(
                                                    "TabletUsernameLocalRanking"),
                                                text: AppLocalizations.of(
                                                        context)!
...
                                              child: CustomText(
                                                key: const Key(
                                                    "TabletLevelLocalRanking"),
                                                text: AppLocalizations.of(
                                                        context)!
...
                                              child: CustomText(
                                                key: const Key(
                                                    "TabletBestScoreLocalRanking"),
                                                text: AppLocalizations.of(
                                                        context)!
...
                          flex: 4,
                          child: CustomText(
                            key: const Key("TabletGlobalRankingText"),
                            text: AppLocalizations.of(context)!.globalranking,
                            size: 30,
...
                                    child: Table(
                                      key:
                                          const Key("TabletTableGlobalRanking"),
                                      border: TableBorder.symmetric(),
                                      defaultVerticalAlignment:
...
                                              child: CustomText(
                                                key: const Key(
                                                    "TabletUsernameGlobalRanking"),
                                                text: AppLocalizations.of(
                                                        context)!
...
                                              child: CustomText(
                                                key: const Key(
                                                    "TabletLevelGlobalRanking"),
                                                text: AppLocalizations.of(
                                                        context)!
...
                                              child: CustomText(
                                                key: const Key(
                                                    "TabletBestScoreGlobalRanking"),
                                                text: AppLocalizations.of(
                                                        context)!
...
